# strava-collections

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  README.md  checkout_activity.py  live-tracking.yaml  package-lock.json  pyproject.toml  repro_args.py  update_strava_tokens.py
.github/actions/bavarian-alps-traverse/: action.yml
.github/actions/bergen-to-istanbul/: action.yml
.github/actions/berlin-to-tarifa/: action.yml
.github/actions/build-all-collections/: action.yml
.github/actions/build-collection/: action.yml
.github/actions/build-collection-yaml/: action.yml
.github/actions/build-example-collection/: action.yml
.github/actions/collections/hikes-with-perla/: action.yml
.github/actions/collections/ibiza-sailing/: action.yml
.github/actions/collections/japan/: action.yml
.github/actions/collections/taiwan/: action.yml
.github/actions/japan/: action.yml
.github/actions/singapore-to-kl/: action.yml
.github/actions/vietnam/: action.yml
.github/workflows/: docs.yml  testing.yml  testing_new.yml
docs/astro/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
docs/astro/.astro/: settings.json
docs/astro/.astro/astro/: content.d.ts
docs/astro/.omc/state/: idle-notif-cooldown.json  last-tool-error.json
docs/astro/scripts/: sync_generated_content.py  watch_and_serve.py
docs/astro/src/: content.config.ts
docs/astro/src/components/: CollectionCard.astro  CollectionPage.astro
docs/astro/src/content/: config.ts
docs/astro/src/layouts/: Layout.astro
docs/astro/src/pages/: index.astro
docs/astro/src/pages/collections/: [slug].astro  bavarian-alps-traverse.astro  bergen-to-istanbul.astro  berlin-to-tarifa.astro  capitals-of-europe.astro  hikes-with-perla.astro  ibiza-sailing-trip.astro  japan.astro  races.astro  singapore-to-kuala-lumpur.astro  taiwan.astro  vietnam.astro
docs/astro/src/styles/: global.css
docs/astro/src/utils/: collections.ts
docs/source/: bavarian_alps.md  conf.py  index.md  quickstart.md  tutorials.md
docs/source/_static/: custom.css  gallery.js
examples/: bavarian-alps-traverse.yml  bergen-to-istanbul.yml  berlin-to-istanbul.yml  berlin-to-tarifa.yml  capitals_of_europe.yml  europe-north-south.yml  geneva-to-budapest.yml  hikes-with-perla.yml  ibiza-sailing.yml  japan.yml  races.yml  scandinavia.yml  singapore-to-kl.yml  taiwan.yml  vietnam.yml  villach-to-zagreb.yml
src/strava_collections/: Villach_to_Ljubljana_to_Zagreb.gpx  activity.py  astro_page.py  collection.py  live_tracking_export.py  main.py  site_sync.py  site_template.py  utils.py
src/strava_collections/site_template/astro/: astro.config.mjs  collections.yaml  package-lock.json  package.json  tailwind.config.mjs
src/strava_collections/site_template/astro/scripts/: sync_generated_content.py  watch_and_serve.py
src/strava_collections/site_template/astro/src/components/: CollectionPage.astro  ElevationChart.astro  Map.astro
src/strava_collections/site_template/source/: live-tracking.yaml
src/strava_collections/templates/: collection_page.astro.j2
tests/unit/: test_app.py  test_serve.py
tutorials/: bavarian-alps.ipynb  example_tutorial.ipynb
(+12 files in other folders)
