[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "wheel" ]

[project]
name = "strava-collections"
version = "0.1"
description = "Collections of strava activities."
readme = "README.md"
keywords = [ "python" ]
license = { file = "LICENSE.txt" }
authors = [ { name = "Max" } ]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "stravalib",
  "numpy",
]

optional-dependencies.dev = [
  "black[jupyter]",
  "isort",
  "ruff",
  "strava-collections[test,docs]",
]
# https://medium.com/@pratikdomadiya123/build-project-documentation-quickly-with-the-sphinx-python-2a9732b66594
optional-dependencies.docs = [
  "ipykernel",
  "myst-parser",
  "nbconvert",
  "nbsphinx",
  "jupyterlab",
  "pre-commit",
  "pyproject-fmt",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx_bootstrap_theme",
]
optional-dependencies.test = [ "coverage", "pytest" ]
urls."Source" = "https://github.com/max-models/strava-collections"
scripts.strava-collections = "strava_collections.main:main"

[tool.setuptools.packages.find]
where = [ "src" ]
